k8s/00-namespace.yaml
# Namespace do encontros-tech.
apiVersion: v1
kind: Namespace
metadata:
  name: encontros-tech
  labels:
    app.kubernetes.io/part-of: encontros-tech
    labs.k8s/project: encontros-tech
